--- a/Tests/index.html
+++ b/Tests/index.html
@@ -45,25 +45,24 @@
      */
     var apiKey = "Sharon";
     Qwiery.apiKey = apiKey;
-    Qwiery.serviceURL = "http://localhost:4785";
+    Qwiery.serviceURL = "http://api.qwiery.com";//http://localhost:4785";
     ctx = {userId: "Sharon"};
 </script>
 
 <script src="Entities.js"></script>
-<script src="Graph.js"></script>
-<script src="Tags.js"></script>
-<script src="Profile.js"></script>
-<script src="Personalization.js"></script>
-<script src="Authentication.js"></script>
-<script src="Security.js"></script>
-<script src="Apps.js"></script>
+<!--<script src="Graph.js"></script>-->
+<!--<script src="Tags.js"></script>-->
+<!--<script src="Profile.js"></script>-->
+<!--<script src="Personalization.js"></script>-->
+<!--<script src="Authentication.js"></script>-->
+<!--<script src="Security.js"></script>-->
+<!--<script src="Apps.js"></script>-->
 
-<script src="Files.js"></script>
-<script src="Lexic.js"></script>
-<script src="Mocks.js"></script>
-<script src="Qwiery.js"></script>
+<!--<script src="Files.js"></script>-->
+<!--<script src="Lexic.js"></script>-->
+<!--<script src="Mocks.js"></script>-->
 
-<script src="Search.js"></script>
+<!--<script src="Search.js"></script>-->
 
 </body>
 </html>
